--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             <h4>Consultancy</h4>
                             <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
                         </div><!-- /.service -->
-                    <!-- </div> --> -->
+                    <!-- </div> -->
                 </div>
             </div>
         </section><!-- /.secton-services -->
