--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                 <div class="col-md-6">
                     <h1>Kharismadina Hijra Muhamad</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Data Science</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <p class="job-title">As a Data Enthusiast</p>
+                        <a href="https://www.linkedin.com/in/kharismadinaHM/" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#portfolio" class="btn btn-border">Explore more</a>
+                        <a href="https://github.com/KharismadinaHM" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
             
@@ -108,7 +108,7 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Hello! I'm Kharismadina Hijra Muhamad, a Data Science, a Data enthusiast, and a guy slighty obsessed for code quality. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
-                        <a href="https://drive.google.com/file/d/17Wk4zxPpGqoBqgOAdGBupkQC0exW13N5/view?usp=sharing" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="https://drive.google.com/file/d/1PRKAI9bve6d3pxbtoLNlHWVdC7DkrInI/view?usp=sharing" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Microsoft Excel</h4>
+                            <h4>PySpark</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="65"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
