--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                  Untuk pengklasifikasian menggunakan Random Forest Classifier. Info selengkapnya silahkan klik ini. </p>
           </div>
           <div class="modal-footer">
-            <a href="https://hoaxnewsdetection.herokuapp.com/" class="btn btn-fill">Visit Page</a>
+            <a href="https://klasifikasiberitaindo.herokuapp.com/" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
